Ner search fixed